# pdf_parser_c

./: .astylerc  .gitmodules  0001-Get-rid-of-ActualText-class-move-its-functionality-t.patch  0001-Remove-ActualText-class-and-fix-reference-count.patch  CMakeLists.txt  Jenkinsfile  README.md  main.cpp  parseargs.cc  poppler.patch  printencodings.cc
inc/: parseargs.hpp  pdf_utils.hpp
poppler-header/: config.h  poppler-config.h
src/: Win32Console.cpp  main.cpp  parseargs.cpp  pdf_utils.cpp
